[project]
name = "nonebot-plugin-brick"
version = "0.1.0"
description = "群聊娱乐插件：烧砖拍人，一砖撂倒（移植自 koishi-plugin-brick）"
authors = [
    {name = "Rain-0x01-39",email = "83620631+Rain-0x01-39@users.noreply.github.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-plugin-orm (>=0.8.3,<0.9.0)",
    "nonebot-plugin-alconna (>=0.60.4,<0.61.0)",
]

[dependency-groups]
adapters = [
    "nonebot-adapter-onebot (>=2.4.6,<3.0.0)",
    "nonebot-adapter-milky (>=1.0.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nonebot]
plugins = ["nonebot_plugin_brick"]
